修复退出登录的BUG

--- a/views/widgets/head.html
+++ b/views/widgets/head.html
@@ -25,7 +25,7 @@
                     </a>
                         <ul class="dropdown-menu" aria-labelledby="dLabel" style="margin-top: 0px">
                             <li><a href="{{urlfor "MemberController.My"}}"><i class="fa fa-user" aria-hidden="true"></i> 个人中心</a> </li>
-                            <li><a href="{{urlfor "MemberController.Logout"}}"><i class="fa fa-sign-out"></i> 退出</a></li>
+                            <li><a href="{{urlfor "AccountController.Logout"}}"><i class="fa fa-sign-out"></i> 退出</a></li>
                         </ul>
                     </div>
                 </li>
