实现命令执行

--- a/views/server/index.html
+++ b/views/server/index.html
@@ -94,6 +94,7 @@
                                     <label for="serverType">Server Type</label>
                                     <select name="type" id="serverType" class="form-control">
                                         <option value="ssh">SSH</option>
+                                        <option value="client">Client</option>
                                     </select>
                                 </div>
                             </div>
