优化体验，修复BUG

--- a/views/scheduler/index.html
+++ b/views/scheduler/index.html
@@ -6,7 +6,7 @@
     <title>执行任务列表 - GitWebHook</title>
     {{template "widgets/headfile.html"}}
     <link rel="stylesheet" href="/static/codemirror/theme/ambiance.css">
-
+    <script type="text/javascript" src="/static/vuejs/vue.min.js"></script>
     {{if .dev}}
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.css">
