--- a/static/css/global.css
+++ b/static/css/global.css
@@ -224,7 +224,9 @@ label{
 .execute-item .text-inactive ,.execute-item-profile.inactive:after{
     color: #aab2bd
 }
-
+.execute-item .text-wait ,.execute-item-profile.wait:after{
+    color: #f6bb42
+}
 .execute-item .text-active,.execute-item-profile.active:after {
     color: #2ecc71
 }
@@ -244,6 +246,9 @@ label{
 }
 .execute-item .sha-msg .fa{
     font-size: 18px;
+    vertical-align: bottom;
+    display: inline-block;
+    margin-right: 5px;
 }
 .execute-item .execute-item-main{
     border-bottom: 1px solid #e9ebef;
