--- a/views/scheduler/detailed.html
+++ b/views/scheduler/detailed.html
@@ -6,7 +6,7 @@
     <title>执行任务列表 - GitWebHook</title>
     {{template "widgets/headfile.html"}}
     <link rel="stylesheet" href="/static/codemirror/theme/ambiance.css">
-
+    <script type="text/javascript" src="/static/vuejs/vue.min.js"></script>
     {{if .dev}}
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.css">
@@ -49,7 +49,7 @@
             </div>
         </div>
     </div>
-    <div class="bottom-container">
+    <div class="bottom-container" id="schedulerList">
         {{if .lists}}
         {{range $index,$item := .lists}}
         {{template "scheduler/index_item.html" .}}
@@ -60,7 +60,6 @@
         {{if gt .totalCount 1}}
         <hr>
         <nav>
-
             {{.html}}
         </nav>
         {{end}}
@@ -177,7 +176,18 @@
                 }
             })
         });
+
     });
+    var app = new Vue({
+       el : "#schedulerList",
+        methods : {
+            resumeSchedule : function (event) {
+                alert("a")
+            }
+        }
+    });
+
+
 </script>
 </body>
 </html>
