--- a/views/home/index.html
+++ b/views/home/index.html
@@ -96,11 +96,11 @@
 </div>
 <!-- Modal -->
 <div class="modal fade" id="copySecureModal" tabindex="-1" role="dialog" aria-labelledby="copySecureModalLabel">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="copySecureModalTitle">Copy Token</h4>
+                <h4 class="modal-title" id="copySecureModalTitle">Copy Url</h4>
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
