--- a/views/server/index.html
+++ b/views/server/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Server List - GitWebHook</title>
-    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="/static/css/global.css">
-    <script src="/static/js/jquery-1.12.4.min.js" type="text/javascript"></script>
-    <script src="/static/js/jquery.form.js" type="text/javascript"></script>
+    {{template "widgets/headfile.html" .}}
 
 </head>
 <body>
@@ -119,8 +115,7 @@
     </div>
 </div>
 {{template  "widgets/foot.html" .}}
-<script src="/static/bootstrap/js/bootstrap.js" type="text/javascript"></script>
-<script src="/static/js/global.js" type="text/javascript"></script>
+
 <script type="text/javascript">
     $(function () {
        $("#serverTable").on("click",".delete-btn",function () {
