--- a/views/widgets/foot.html
+++ b/views/widgets/foot.html
@@ -1,8 +1,11 @@
 <div class="container-fluid navbar-fixed-bottom footer">
     <div class="text-center">
-        <span>&copy; </span>
-        <span><a href="https://github.com/lifei6671/go-git-webhook" target="_blank">Go GitWebHook</a> </span>
-        <span>版权所有</span>
+        <span><a href="https://hook.iminho.me" target="_blank">SmartWebHook</a> </span>
+        <span style="display: inline-block;padding: 0 5px;"> · </span>
+        <span><a href="https://github.com/lifei6671/go-git-webhook/issues" target="_blank">意见反馈</a> </span>
+        <span style="display: inline-block;padding: 0 5px;"> · </span>
+        <span><a href="https://github.com/lifei6671/go-git-webhook" target="_blank">GitHub</a> </span>
+
     </div>
 </div>
 <script src="/static/bootstrap/js/bootstrap.js" type="text/javascript"></script>
