--- a/views/member/edit.html
+++ b/views/member/edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Edit Member - GitWebHook</title>
+    <title>Edit Member - SmartWebHook</title>
     <link href="/static/webuploader/webuploader.css" rel="stylesheet">
     <link href="/static/cropper/cropper.css" rel="stylesheet">
     {{template "widgets/headfile.html" .}}
