--- a/views/relation/server_list.html
+++ b/views/relation/server_list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WebHook the list of servers - GitWebHook</title>
+    <title>WebHook the list of servers - SmartWebHook</title>
     {{template "widgets/headfile.html"}}
     <link rel="stylesheet" href="/static/bootstrap/plugins/select2/css/select2.min.css">
     <style type="text/css">
