--- a/views/template.html
+++ b/views/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>用户登录 - GitWebHook</title>
+    <title>用户登录 - SmartWebHook</title>
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/static/css/global.css">
 </head>
@@ -17,7 +17,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand" se_prerender_url="complete">Go GitWebHook</a>
+            <a href="/" class="navbar-brand" se_prerender_url="complete">SmartWebHook</a>
         </div>
         <nav class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -56,7 +56,7 @@
 <div class="container-fluid navbar-fixed-bottom footer">
     <div class="text-center">
         <span>&copy; </span>
-        <span><a href="https://github.com/lifei6671/go-git-webhook" target="_blank">Go GitWebHook</a> </span>
+        <span><a href="https://github.com/lifei6671/go-git-webhook" target="_blank">SmartWebHook</a> </span>
         <span>版权所有</span>
     </div>
 </div>
