--- a/views/account/login.html
+++ b/views/account/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>用户登录 - GitWebHook</title>
+    <title>用户登录 - SmartWebHook</title>
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/static/css/global.css">
@@ -22,15 +22,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">Go GitWebHook</a>
+            <a href="/" class="navbar-brand">SmartWebHook</a>
         </div>
     </div>
 </header>
 <div class="container">
     <div class="bs-docs-container">
         <div class="login-body text-center">
-            <h1>Welcome to Go GitWebHook</h1>
-            <p>Login with your <strong>Go GitWebHook</strong> ID</p>
+            <h1>Welcome use SmartWebHook</h1>
+            <p>Login with your <strong>SmartWebHook</strong> ID</p>
             <form class="form-inline" method="post" id="loginForm">
                 <div class="form-group">
                     <label class="sr-only" for="inputAccount">Account</label>
@@ -58,9 +58,11 @@
 </div>
 <div class="container-fluid navbar-fixed-bottom footer">
         <div class="text-center">
-            <span>&copy; </span>
-            <span><a href="#">Go GitWebHook</a> </span>
-            <span>版权所有</span>
+            <span><a href="https://hook.iminho.me" target="_blank">SmartWebHook</a> </span>
+            <span style="display: inline-block;padding: 0 5px;"> · </span>
+            <span><a href="https://github.com/lifei6671/go-git-webhook/issues" target="_blank">意见反馈</a> </span>
+            <span style="display: inline-block;padding: 0 5px;"> · </span>
+            <span><a href="https://github.com/lifei6671/go-git-webhook" target="_blank">GitHub</a> </span>
         </div>
 </div>
 <script src="/static/bootstrap/js/bootstrap.js"></script>
@@ -81,12 +83,12 @@
            dataType : "json",
            beforeSubmit : function () {
              var account = $.trim(inputAccount.val());
-             if(account == ""){
+             if(account === ""){
                  inputAccount.closest(".form-group").addClass("has-error");
                  return false;
              }
              var password = $.trim(inputPassword.val());
-             if(password == ""){
+             if(password === ""){
                  inputPassword.closest(".form-group").addClass("has-error");
                  return false;
              }
