--- a/views/home/index.html
+++ b/views/home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Go GitWebHook List - GitWebHook</title>
+    <title>WebHook List - SmartWebHook</title>
     {{template "widgets/headfile.html"}}
 </head>
 <body>
