--- a/views/member/list.html
+++ b/views/member/list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>用户列表 - GitWebHook</title>
+    <title>用户列表 - SmartWebHook</title>
     {{template "widgets/headfile.html" .}}
 </head>
 <body>
