--- a/views/scheduler/index_vue.html
+++ b/views/scheduler/index_vue.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>执行任务列表 - GitWebHook</title>
+    <title>执行任务列表 - SmartWebHook</title>
     {{template "widgets/headfile.html"}}
     <link rel="stylesheet" href="/static/codemirror/theme/ambiance.css">
     <script type="text/javascript" src="/static/vuejs/vue.min.js"></script>
