--- a/views/server/edit.html
+++ b/views/server/edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Edit Server - GitWebHook</title>
+    <title>Edit Server - SmartWebHook</title>
     {{template "widgets/headfile.html" .}}
 </head>
 <body>
