--- a/views/widgets/head.html
+++ b/views/widgets/head.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand" se_prerender_url="complete">Go GitWebHook</a>
+            <a href="/" class="navbar-brand" se_prerender_url="complete">SmartWebHook</a>
         </div>
         <nav class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
