--- a/views/scheduler/index_vue.html
+++ b/views/scheduler/index_vue.html
@@ -95,7 +95,7 @@
 
             <div class="execute-item-main">
                 <div class="sha-msg">
-                    <span data-toggle="tooltip" title="Commit SHA 值"><i class="fa fa-bookmark-o" aria-hidden="true"></i><span v-if="item.sha_value == ''">无</span><span v-else>${item.sha_value}</span> </span>
+                    <span data-toggle="tooltip" title="HASH 值"><i class="fa fa-bookmark-o" aria-hidden="true"></i><span v-if="item.sha_value == ''">无</span><span v-else>${item.sha_value}</span> </span>
                 </div>
                 <div class="meta">
 
