优化保存用户信息时的文本提示

--- a/views/member/edit.html
+++ b/views/member/edit.html
@@ -186,7 +186,21 @@
         });
 
         $("#formSaveMember").ajaxForm({
-
+            beforeSubmit : function () {
+                var btn = $("#btnSaveMember");
+                btn.button("load");
+            },
+            success : function (res) {
+                if(res.errcode !== 0){
+                    $("#errorMessage").css("color","red").text(res.message);
+                }else{
+                    $("#errorMessage").css("color","green").text("保存成功");
+                }
+                $("#btnSaveMember").button("reset");
+            },
+            error : function () {
+                $("#btnSaveMember").button("reset");
+            }
         });
     });
     try {
